# synapse-proxy

./: .gitignore  .gitignore-extra  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Caddyfile.prod  DEPLOYMENT.md  DEPLOYMENT_HETZNER.md  LAUNCH_KIT.md  MODEL_RADAR.md  PRICING_DATA.md  README.md  README_FR.md  ROADMAP.md  SECURITY.md  USE_CASES.md  create-deploy-bundle.sh  deploy-prod.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  mcp_marketplaces_submission_guide.md  package-lock.json  redis-stack-override.conf  redis-stack.Dockerfile  redis-start.sh  social_posts.md  social_posts_PROPOSAL.md  video_prompts.md  video_script.md  video_scripts_v2.md  walkthrough.md
proxy/rust-embedder/: Cargo.toml
proxy/rust-embedder/src/: lib.rs
proxy/rust-embedder/target_antigravity/: .rustc_info.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/autocfg-e564221cabed035f/: lib-autocfg
proxy/rust-embedder/target_antigravity/release/.fingerprint/bitflags-7adfee11af58bd10/: lib-bitflags
proxy/rust-embedder/target_antigravity/release/.fingerprint/bytemuck-6a1fbc90d1b62883/: lib-bytemuck  lib-bytemuck.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/bytemuck_derive-d901845a31b696a9/: lib-bytemuck_derive  lib-bytemuck_derive.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/crc32fast-6b178b0c68bd95e6/: run-build-script-build-script-build  run-build-script-build-script-build.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/crc32fast-89c99507ad48d35a/: build-script-build-script-build  build-script-build-script-build.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/crossbeam-deque-17f0a1ed47d0a0c3/: lib-crossbeam_deque
proxy/rust-embedder/target_antigravity/release/.fingerprint/crossbeam-epoch-792f891e67c0581d/: lib-crossbeam_epoch.json
proxy/rust-embedder/target_antigravity/release/.fingerprint/crossbeam-utils-42972e13a2985c60/: lib-crossbeam_utils
proxy/rust-embedder/target_antigravity/release/.fingerprint/darling_core-640cdf5711a87f1e/: lib-darling_core  (+1 more)
sdk/python/: pyproject.toml
sdk/python/synapse_proxy/: __init__.py  client.py  exceptions.py  types.py
sdk/python/tests/: test_synapse_proxy.py
(+582 files in other folders)
