[package]
name = "rust-embedder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
candle-transformers = { version = "0.8.0" }
tokenizers = { version = "0.20.0", default-features = false, features = ["unstable_wasm"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
