[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-proxy"
version = "0.1.0"
description = "Drop-in OpenAI-compatible client for Synapse Proxy with session recording, cache stats, and A/B benchmark extensions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Synapse Proxy", email = "contact@synapse-proxy.com" }
]
keywords = [
    "synapse-proxy",
    "llm",
    "caching",
    "observability",
    "openai-compatible",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]
all = [
    "openai>=1.0.0",
    "requests>=2.28.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage = "https://synapse-proxy.com"
Repository = "https://github.com/dudutti/synapse-proxy-sdk"
Documentation = "https://docs.synapse-proxy.com/sdk/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
